--- a/Informacion/fundamentos.html
+++ b/Informacion/fundamentos.html
@@ -33,6 +33,7 @@
       }
     }
   </script>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body class="font-sans bg-cura-primary text-white overflow-x-hidden flex flex-col min-h-screen">
 
@@ -55,13 +56,13 @@
   </header>
 
   <main class="max-w-5xl mx-auto px-6 py-12">
-    <nav class="mb-8 flex items-center gap-2 text-sm text-cura-accentLight">
+    <nav class="mb-8 flex items-center gap-2 text-sm text-cura-accentLight" data-aos="fade-down">
       <a href="/Informacion/informacion" class="hover:underline text-cura-accentLight">Información</a>
       <span>/</span>
       <span class="text-white font-semibold">Fundamentos de la Ley</span>
     </nav>
 
-    <div class="mb-12">
+    <div class="mb-12" data-aos="fade-up">
       <h1 class="text-3xl md:text-5xl font-extrabold mb-4 bg-clip-text text-transparent bg-gradient-to-r from-white to-cura-accentLight">
         Fundamentos de la Ley
       </h1>
@@ -69,82 +70,97 @@
 
     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
       
-      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
-        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
-          <i class="ph-bold ph-intersect text-cura-accent text-2xl"></i>
-          1. El Fin de la Fragmentación Sanitaria
-        </h3>
-        <p class="text-sm text-cura-accentLight leading-relaxed">
-          La Ley C.U.R.A. surge como la respuesta estructural al sistema de salud más fragmentado de la región. Actualmente, la información clínica está dispersa en miles de "islas de datos" que no se comunican entre sí. Esta ley establece una <strong>red sanitaria federal única e interoperable</strong>, garantizando que el historial clínico no pertenezca a la institución, sino al ciudadano.
-        </p>
+      <div data-aos="fade-up" data-aos-delay="100">
+        <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-2 hover:shadow-cura-accent/20 h-full">
+          <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+            <i class="ph-bold ph-intersect text-cura-accent text-2xl"></i>
+            1. El Fin de la Fragmentación Sanitaria
+          </h3>
+          <p class="text-sm text-cura-accentLight leading-relaxed">
+            La Ley C.U.R.A. surge como la respuesta estructural al sistema de salud más fragmentado de la región. Establece una <strong>red sanitaria federal única e interoperable</strong>, garantizando que el historial clínico pertenezca al ciudadano.
+          </p>
+        </div>
       </div>
 
-      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
-        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
-          <i class="ph-bold ph-handshake text-cura-accent text-2xl"></i>
-          2. Federalismo de Concertación y el Pacto de Mayo
-        </h3>
-        <p class="text-sm text-cura-accentLight leading-relaxed">
-          En sintonía con el <strong>Pacto de Mayo</strong>, el proyecto se apoya en la institucionalidad del <strong>Consejo de Mayo</strong>. No es una imposición centralista, sino una herramienta de <strong>Federalismo de Concertación</strong> que permite a las provincias modernizar su infraestructura, alcanzar el equilibrio fiscal y mejorar la calidad prestacional sin perder su autonomía jurisdiccional.
-        </p>
+      <div data-aos="fade-up" data-aos-delay="200">
+        <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-2 hover:shadow-cura-accent/20 h-full">
+          <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+            <i class="ph-bold ph-handshake text-cura-accent text-2xl"></i>
+            2. Federalismo de Concertación y el Pacto de Mayo
+          </h3>
+          <p class="text-sm text-cura-accentLight leading-relaxed">
+            En sintonía con el <strong>Pacto de Mayo</strong>, el proyecto permite a las provincias modernizar su infraestructura y alcanzar el equilibrio fiscal sin perder su autonomía jurisdiccional mediante el Federalismo de Concertación.
+          </p>
+        </div>
       </div>
 
-      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
-        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
-          <i class="ph-bold ph-chart-line-up text-cura-accent text-2xl"></i>
-          3. Eficiencia Fiscal y Equilibrio Macroeconómico
-        </h3>
-        <p class="text-sm text-cura-accentLight leading-relaxed">
-          La digitalización total no es solo una mejora tecnológica, es una política de austeridad inteligente. Al eliminar el <strong>gasto sanitario improductivo</strong> (duplicación de estudios, recetas manuales y burocracia física), se proyecta una reducción del gasto público real, permitiendo reasignar recursos hacia insumos críticos y equipamiento de alta complejidad.
-        </p>
+      <div data-aos="fade-up" data-aos-delay="300">
+        <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-2 hover:shadow-cura-accent/20 h-full">
+          <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+            <i class="ph-bold ph-chart-line-up text-cura-accent text-2xl"></i>
+            3. Eficiencia Fiscal y Equilibrio Macroeconómico
+          </h3>
+          <p class="text-sm text-cura-accentLight leading-relaxed">
+            La digitalización total es una política de austeridad inteligente. Al eliminar el <strong>gasto sanitario improductivo</strong>, se permite reasignar recursos hacia insumos críticos y equipamiento de alta complejidad.
+          </p>
+        </div>
       </div>
 
-      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
-        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
-          <i class="ph-bold ph-globe-hemisphere-west text-cura-accent text-2xl"></i>
-          4. Interoperabilidad como Cuestión de Estado
-        </h3>
-        <p class="text-sm text-cura-accentLight leading-relaxed">
-          La ley eleva los estándares internacionales <strong>HL7 FHIR y SNOMED CT</strong> a nivel de <strong>Orden Público</strong>. La capacidad de que los sistemas "hablen el mismo idioma" deja de ser una opción técnica para convertirse en una obligación legal, garantizando que un diagnóstico sea legible y accionable en todo el país.
-        </p>
+      <div data-aos="fade-up" data-aos-delay="400">
+        <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-2 hover:shadow-cura-accent/20 h-full">
+          <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+            <i class="ph-bold ph-globe-hemisphere-west text-cura-accent text-2xl"></i>
+            4. Interoperabilidad como Cuestión de Estado
+          </h3>
+          <p class="text-sm text-cura-accentLight leading-relaxed">
+            La ley eleva los estándares internacionales <strong>HL7 FHIR y SNOMED CT</strong> a nivel de Orden Público, garantizando que un diagnóstico sea legible y accionable en cualquier rincón del país.
+          </p>
+        </div>
       </div>
 
-      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
-        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
-          <i class="ph-bold ph-shield-check text-cura-accent text-2xl"></i>
-          5. Soberanía Sanitaria y Privacidad por Diseño
-        </h3>
-        <p class="text-sm text-cura-accentLight leading-relaxed">
-          Bajo el principio de <strong>Soberanía Sanitaria Digital</strong>, toda la infraestructura y el procesamiento de datos críticos se mantienen bajo jurisdicción nacional. Se implementan mecanismos de <strong>Privacidad por Diseño</strong>, asegurando que el acceso esté estrictamente auditado y protegido por criptografía.
-        </p>
+      <div data-aos="fade-up" data-aos-delay="500">
+        <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-2 hover:shadow-cura-accent/20 h-full">
+          <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+            <i class="ph-bold ph-shield-check text-cura-accent text-2xl"></i>
+            5. Soberanía Sanitaria y Privacidad por Diseño
+          </h3>
+          <p class="text-sm text-cura-accentLight leading-relaxed">
+            Toda la infraestructura y el procesamiento de datos se mantienen bajo jurisdicción nacional, asegurando que el acceso esté estrictamente auditado y protegido por criptografía avanzada.
+          </p>
+        </div>
       </div>
 
-      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
-        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
-          <i class="ph-bold ph-users text-cura-accent text-2xl"></i>
-          6. Humanización de la Atención
-        </h3>
-        <p class="text-sm text-cura-accentLight leading-relaxed">
-          Al devolverle tiempo al médico —eliminando la carga administrativa— y seguridad al paciente —evitando errores por falta de antecedentes—, la tecnología de C.U.R.A. actúa como un puente hacia una atención más humana, digna y transparente.
-        </p>
+      <div data-aos="fade-up" data-aos-delay="600">
+        <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-2 hover:shadow-cura-accent/20 h-full">
+          <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+            <i class="ph-bold ph-users text-cura-accent text-2xl"></i>
+            6. Humanización de la Atención
+          </h3>
+          <p class="text-sm text-cura-accentLight leading-relaxed">
+            Al eliminar la carga administrativa del médico y dar seguridad al paciente sobre sus antecedentes, la tecnología actúa como un puente hacia una atención digna y transparente.
+          </p>
+        </div>
       </div>
 
-      <div class="md:col-span-2 bg-cura-card rounded-2xl border border-cura-accent/40 p-8 shadow-xl transition-all duration-300 hover:border-cura-accent hover:-translate-y-1">
-        <h3 class="text-xl font-bold text-white mb-4 flex items-center gap-3">
-          <i class="ph-bold ph-brain text-cura-accent text-3xl"></i>
-          7. Salud Mental y Estrategia Nacional de Acceso
-        </h3>
-        <p class="text-sm md:text-base text-cura-accentLight leading-relaxed">
-          La ley integra la salud mental en la Historia Clínica Única con <strong>protocolos de confidencialidad reforzada</strong> y encriptación superior. Para resolver la saturación del sistema, implementa un modelo de <strong>Asignación Eficiente de Recursos</strong>: se reserva la atención presencial para casos críticos y adultos mayores, mientras que para el paciente digital se prioriza la <strong>Teleconsulta Federal</strong>. Esto elimina las listas de espera locales mediante la federalización de la oferta profesional y la validez nacional de la matrícula remota, garantizando un abordaje holístico, inmediato y seguro que une lo físico con lo psíquico.
-        </p>
+      <div class="md:col-span-2" data-aos="zoom-in" data-aos-delay="700">
+        <div class="bg-cura-card rounded-2xl border border-cura-accent/40 p-8 shadow-xl transition-all duration-300 hover:border-cura-accent hover:-translate-y-2 hover:shadow-cura-accent/10">
+          <h3 class="text-xl font-bold text-white mb-4 flex items-center gap-3">
+            <i class="ph-bold ph-brain text-cura-accent text-3xl"></i>
+            7. Salud Mental y Estrategia Nacional de Acceso
+          </h3>
+          <p class="text-sm md:text-base text-cura-accentLight leading-relaxed">
+            La ley integra la salud mental con <strong>protocolos de confidencialidad reforzada</strong>. Implementa un modelo de asignación eficiente: reserva la atención presencial para casos críticos y adultos mayores, derivando al paciente digital hacia la <strong>Teleconsulta Federal</strong> para eliminar listas de espera locales.
+          </p>
+        </div>
       </div>
+
     </div>
 
     <div class="mt-12 pt-8 border-t border-white/10 flex flex-col sm:flex-row items-center justify-between gap-6">
-      <p class="text-cura-accentLight text-sm italic">Hacia una salud más justa, eficiente y humana.</p>
-      <a href="/Informacion/financiamiento" class="flex items-center gap-2 text-sm font-semibold text-cura-accent hover:text-white transition">
-        Siguiente: Financiamiento
-        <i class="ph-bold ph-arrow-right"></i>
+      <p class="text-cura-accentLight text-sm italic" data-aos="fade-left">Hacia una salud más justa, eficiente y humana.</p>
+      <a href="/Informacion/financiamiento" class="flex items-center gap-2 text-sm font-semibold text-cura-accent hover:text-white transition group">
+        Siguiente: Financiamiento 
+        <i class="ph-bold ph-arrow-right transition-transform group-hover:translate-x-1"></i>
       </a>
     </div>
   </main>
@@ -152,19 +168,36 @@
   <footer class="py-12 border-t border-white/10 text-center mt-auto">
     <p class="text-sm text-white/40">Copyright © 2026 C.U.R.A. - Todos los derechos reservados.</p>
   </footer>
-<script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script> 
-<script>
-  const lenis = new Lenis({
-    duration: 1.2,
-    easing: (t) => Math.min(1, 1.001 - Math.pow(2, -10 * t)),
-    smoothWheel: true
-  });
 
-  function raf(time) {
-    lenis.raf(time);
+  <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script> 
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+  <script>
+    // Inicializar Lenis (Scroll Suave)
+    const lenis = new Lenis({
+      duration: 1.2,
+      easing: (t) => Math.min(1, 1.001 - Math.pow(2, -10 * t)),
+      smoothWheel: true
+    });
+
+    function raf(time) {
+      lenis.raf(time);
+      requestAnimationFrame(raf);
+    }
     requestAnimationFrame(raf);
-  }
-  requestAnimationFrame(raf);
-</script>
-  </body>
+
+    // Inicializar AOS con sincronización
+    document.addEventListener('DOMContentLoaded', function() {
+      AOS.init({
+        duration: 800,
+        once: true,
+        offset: 50,
+        anchorPlacement: 'top-bottom'
+      });
+
+      // Sincronizar AOS con Lenis
+      lenis.on('scroll', AOS.refresh);
+    });
+  </script>
+</body>
 </html>
